# rs-rss

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile.toml  README.md  articles.json  buildspec_run.yml  buildspec_test.yml  circleci.yml  compose.yml  docker-compose.yml
.cargo/: config.toml
adapter/: Cargo.toml
adapter/migrations/: 20250504161031_common.down.sql  20250504161031_common.up.sql  20250504161116_web_article.up.sql  20250504161128_academic_paper.up.sql
adapter/src/database/models/: academic_paper.rs  web_article.rs
adapter/src/repository/: academic_paper.rs  web_article.rs
application_layer/academic_paper_crawler/: Cargo.toml
application_layer/academic_paper_crawler/src/models/: academic_paper.rs
application_layer/academic_paper_crawler/src/repository/: mod.rs
application_layer/api/: Cargo.toml  README.md
application_layer/api/src/handler/: academic_paper.rs  health.rs  mod.rs  paper_note.rs  web_article.rs
application_layer/api/src/models/: academic_paper.rs  paper_note.rs  web_article.rs
application_layer/api/src/route/: academic_paper.rs  mod.rs  paper_note.rs  v1.rs  web_article.rs
application_layer/commands/: Cargo.toml
application_layer/commands/src/: add_academic_paper.rs  collece_articles.rs  lib.rs  notify_web_articles_to_slack.rs  start_dashboard.rs
application_layer/dashboard/: Cargo.toml
application_layer/dashboard/src/: lib.rs
application_layer/dashboard/src/models/: mod.rs  web_article.rs
application_layer/dashboard/src/route/: v1.rs  web_article.rs
backend/: Cargo.toml
backend/application_layer/academic_paper_crawler/: Cargo.toml
backend/application_layer/api/: Cargo.toml  README.md
backend/application_layer/commands/src/: collect_articles.rs  lib.rs
backend/common_layer/registry/src/: lib.rs
backend/common_layer/shared/src/: common.rs  config.rs  errors.rs
backend/data_layer/adapter/.sqlx/: query-0e3ed941d8c0263566af4bb17efd0f4ce62fc8937a41ec9d9bf8765d4fa4fab3.json  (+37 more)
backend/middle_layer/kernel/: Cargo.toml
backend/src/slack/: mod.rs  tests.rs
common_layer/shared/: Cargo.toml
common_layer/shared/src/: errors.rs  id.rs  lib.rs  logger.rs  utils.rs
crawler/: Cargo.toml
crawler/src/models/: mod.rs  web_article.rs
dashboard/: Cargo.toml
dashboard/src/handler/: web_article.rs
dashboard/src/model/: mod.rs  web_article.rs
dashboard/src/route/: health.rs  mod.rs
data_layer/adapter/: Cargo.toml
data_layer/adapter/.sqlx/: query-02278279b0b8748992b3ef151ba40a729568402b047d9c3e36e393756a532a86.json  query-0588d9ad75ded4131a9face3f19236db2a494894cac0acdaf30ec2815512a4e1.json  query-0adc85f6410204eb8eaa6e659df233d68377406e79bee799210f0021fd317f95.json  query-0d9e21f016ca04957450dc2806ef9389d7d141224af49308823c0a6d83965bbc.json  query-10a356c38dbe967214c67a5f01e00f79b5045d1ca8ecc92e08b2adf4bcb675fe.json  query-10bbd4d70cf31fea43a69599cf46c72af38082df06633456b1f111d3e4ea75ec.json  query-12a06d96a072b696be8c30c7bc3a05e0690650538949fea1f5f1c8151db3a264.json  query-18120d6d6b0a91ec6b3e2d693c268f6863392b8ff939fb48d7d6e7325a1eeced.json  query-1af9f1454d2f4802ffe153b2d24963ec728b58166b07faa25e04452a8db25b2a.json  query-1c5bfa06c0f32baacb466ad95c9ebb6858d18a4388b686599c8f5f97cc820e6c.json  query-1fdc953f0e7ff0b29e7ec6a4b502e4f692b984b42c76148a7289c683ffe5ac62.json  query-20cffd019ba65009a3df2f66d262c8a3d8fb59a109d795e55f717b59f46f31f5.json  query-21adb10d7997b386c94cb5b9f1619fcfbaf97f4d80c23f634e52f4ab7304701e.json  query-237936982a3a7cd1433d7920fe23908504cf5f37f3f4c30c35881a98d5375447.json  query-29e27ad5d8ad9217090bb75989f9991ad092535f3086bf68a04126039a8a66e0.json  query-2be115af0248de95b76ef963d8318a52a0e456fa599bed90ad48e2042e46f3c6.json  query-2d3aec965b525bfb76af4dff2fc2c75a7d00a98a8ee1df0fb327fcd4fde75992.json  query-2e0613e4d27eb72f5398cbc84ba52e2825612ce72e9e9dc8622b801b2632473b.json  query-2eada1d1dbb7a99b5f5f789c5bec282bfebdac470844d0ff4438aa16728ce897.json  query-3cbcd1e16b6e946fa7b625c49b72a44177f8b9c40b00aacd49ec6710f3706d74.json  query-3f63ed0a6dc6c8185b8fe07c33c6dc455fa5a681bb465f399934685c3443a2d4.json  query-4102038d62e73102dc90a3c2be6c9a33995a51f6e88cafad39d3140a096da134.json  query-488675c26f3bd92bd408858ed6f75b9e5f2eb73ed77143b94a82e8a04402c201.json  query-495dfc79b74c9450af2ff7dd0c6a0e0d9dd842660893fe0f432e8b6b8d5a0e84.json  query-4df9c06562ac563e6c0de9a51577833ffee8e81714e52f17d66b662ba73c2c82.json  query-5205e840460da7f6a52d774643a0bbfbd773e75c83101f70332158bb43a2f8b3.json  query-55e65f9b3b85a5b0c1575db4feb11bf8948cdc3444e30ec642c8ed863901de3e.json  query-571dc1ddf4c7ec4ce9a1c5fe5ebfd30992216f0ff0643d77348482b8f0defa98.json  query-5c5cb9c0b5d5c56d7301608b3972939ebda11afd663283c378b113a21860a260.json  query-5f9a452d6181e0a5dd1293bef64e6773a0bc5d8db62c8c89a0313caa074b8e11.json  query-6032f8946377ea7258b10df02543bf1e53347da20ecc05c99e4008234336c567.json  query-61bb57dcd4093a42253d7230ab92b0dfb0a86135a6f16015806bca2f0138ce5f.json  query-6285f906392497b95c96f7d29ef07932030d6daa518205ede7983f5fa5b6a2d9.json  query-647225b33317c73ea34a9f910aa79342efc91d6110b0c76f6301708246e364c8.json  query-6c39e921ebf2edf7fcf9be1099e454d7b33c5eaba51accd8d7ba188a3258bb30.json  query-6c45f000f8fad6a18b1824d90c606cc95e5fa11f727c93b61369a89160608d43.json  query-6eb4a8d1c415b6745d337659d50fb49a4d8db3e9e6a05925e3be1c34cef637cc.json  query-71364d8af23b8b2db8ef60832793b1cbeec835fff0692a022ea2f3150b4062eb.json  query-715d73ac192f6d5bf32eff4a4baf38f9ccbb1b85e71550c01314289ed009acb8.json  query-7170813c5c21dea2507a59c40f2171a1d9f29dced826bbe01b0c80fab4619b7d.json  (+38 more)
data_layer/adapter/migrations/: 20250504161031_common.up.sql  20250504161116_web_article.up.sql  20250504161128_academic_paper.down.sql  20250504161128_academic_paper.up.sql
kernel/: Cargo.toml
kernel/src/models/: academic_paper.rs  mod.rs  web_article.rs
kernel/src/repository/: academic_paper.rs  mod.rs  web_article.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs  errors.rs  id.rs  lib.rs  logger.rs  utils.rs
web_article_crawler/: Cargo.toml
web_article_crawler/src/models/: web_article.rs
(+404 files in other folders)
