[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
derive-new.workspace = true
kernel.workspace = true
shared.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
