[package]
edition.workspace = true
license.workspace = true
name = "adapter"
publish.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
kernel.workspace = true
shared.workspace = true
sqlx.workspace = true
uuid.workspace = true
