[package]
edition.workspace = true
license.workspace = true
name = "crawler"
publish.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
feed-parser.workspace = true
kernel.workspace = true
openai-tools.workspace = true
regex.workspace = true
request.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
tokio.workspace = true
registry.workspace = true
tracing.workspace = true
adapter.workspace = true
