[package]
edition.workspace = true
license.workspace = true
name = "kernel"
publish.workspace = true
version = "0.1.0"

[dependencies]
async-trait.workspace = true
derive-new.workspace = true
shared.workspace = true
chrono.workspace = true
openai-tools.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
