[package]
edition.workspace = true
license.workspace = true
name = "shared"
publish.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
feed-parser.workspace = true
indicatif.workspace = true
request.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
garde.workspace = true
axum.workspace = true
dotenvy.workspace = true
