[package]
name = "academic_paper_crawler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
openai-tools.workspace = true
rsrpp.workspace = true
derive-new.workspace = true
shared.workspace = true
arxiv-tools.workspace = true
ss-tools.workspace = true
kernel.workspace = true
tracing.workspace = true
regex.workspace = true
