[package]
edition.workspace = true
license.workspace = true
name = "shared"
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
feed-parser = { workspace = true }
garde = { workspace = true }
indicatif = { workspace = true }
request = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqlx-core = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
