[package]
edition.workspace = true
license.workspace = true
name = "academic_paper_crawler"
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
arxiv-tools.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
dotenvy.workspace = true
kernel.workspace = true
openai-tools.workspace = true
regex.workspace = true
rsrpp.workspace = true
serde.workspace = true
shared.workspace = true
ss-tools.workspace = true
tracing.workspace = true
