[package]
edition.workspace = true
license.workspace = true
name = "api"
publish.workspace = true
version.workspace = true

[dependencies]
academic_paper_crawler = { workspace = true }
axum = { workspace = true }
derive-new = { workspace = true }
garde = { workspace = true }
kernel = { workspace = true }
registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
